--- a/app/views/admin/pages/add.phtml
+++ b/app/views/admin/pages/add.phtml
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col s10 m8 l5 push-s1 push-m1 push-l1" style="margin-top: -30px">
+    <div class="col s10 m8 l5 push-s1" style="margin-top: -30px">
         <h5 class="teal-text">
             Добавить новую страницу
         </h5>
