--- a/app/views/widgets/mainpage/sidebar-polls.phtml
+++ b/app/views/widgets/mainpage/sidebar-polls.phtml
@@ -1,3 +1,4 @@
+<?php if ($poll) { ?>
 <div class="row">
     <div class="col s12 m12 l12 center-align">
         <h5 id="category-title">Наш опрос</h5>
@@ -19,3 +20,4 @@
          Голосовать
     </a>
 </div>
+<?php } ?>
