--- a/app/views/index.phtml
+++ b/app/views/index.phtml
@@ -14,6 +14,10 @@
 
     <title>DeLanaAuto - Autoskola Daugavpilī</title>
 
+    <meta name="title" content="<?= isset($metaTitle) ? $metaTitle : '' ?>">
+    <meta name="description" content="<?= isset($metaDescription) ? $metaDescription : '' ?>">
+    <meta name="keywords" content="<?= isset($metaKeywords) ? $metaKeywords : '' ?>">
+
     <link rel="icon" href="/img/favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 
